[package]
name = "rolled_stats"
version = "0.1.0"
authors = ["N9199 <N9199@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[dependencies]
rand = "^0.6"